outputs/csi500-test/treevoo/2025-07-28_01-49-13/problem_iter22_response4.txt_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi500/gpt.py", line 20
    df['true_range'] = df[['high'-'low', 'high'-'close'].shift(1), 'close'].shift(1)-'low']].max(axis=1)
                                                                                          ^
SyntaxError: unmatched ']'
